# i2c

./: .gitignore  README.md  pyproject.toml
i2c/: test.py
